<resources>
    <string name="app_name">Helping Hand</string>
    <string name="app_title">HELPING HAND</string>
    <string name="sing_up_title">REGISTRO</string>
    <string name="personal_label">Datos personales</string>
    <string name="user_hint">Correo</string>
    <string name="pass_hint">Contraseña</string>
    <string name="forgot_pass">¿Olvidó su contraseña?</string>
    <string name="login_txt">Iniciar sesión</string>
    <string name="sing_up_txt">Registrarse</string>
    <string name="name_hint">Nombre</string>
    <string name="last_name1_hint">Apellido Paterno</string>
    <string name="last_name2_hint">Apellido Materno</string>
    <string name="bday_hint">Fecha de nacimiento - dd/mm/yy</string>
    <string name="phone_hint">Teléfono fijo</string>
    <string name="cpassword_hint">Confirmar contraseña</string>
    <string name="next_btn">Siguiente</string>
    <string name="terms_and_cond_txt">Aceptar los Términos y condiciones</string>
    <string name="others_txt">Otros Datos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>