<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".UI.Login">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint= "@string/app_title"
            android:textColorHint="@color/edges"
            android:textSize="25sp"
            android:textStyle="bold|italic"
            android:layout_marginTop="30dp" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_hint"
            android:inputType="textEmailAddress"
            android:paddingStart="20sp"
            android:paddingEnd="20sp"
            android:textSize="30sp"
            android:textColorHint="@color/edges"
            android:layout_marginTop="70dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:maxLines="1"
            android:importantForAutofill="no"
            android:background="@drawable/edittext_background"/>
        <EditText
            android:id="@+id/et_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass_hint"
            android:inputType="textPassword"
            android:paddingStart="20sp"
            android:paddingEnd="20sp"
            android:textSize="30sp"
            android:textColorHint="@color/edges"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:maxLines="1"
            android:importantForAutofill="no"
            android:background="@drawable/edittext_background"/>
        <TextView
            android:id="@+id/tv_forgetpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/forgot_pass"
            android:textSize="30sp"
            android:textColorHint="@color/black"
            android:gravity="center"
            android:layout_marginTop="40dp" />
        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/login_txt"
            android:textSize="30sp"
            android:backgroundTint="@color/buttons"
            android:textColorHint="@color/black"
            android:layout_gravity="center"
            android:layout_marginTop="150dp"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/buttons"
            android:hint="@string/sing_up_txt"
            android:textColorHint="@color/black"
            android:textSize="30sp"
            android:layout_marginTop="20dp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>